@startuml

class Controller{
+Controller(FactoryState factory)
+run()
}

abstract class ControllerState{
+{abstract}run()
}

class MenuState{
+run()
}
class RankingState{
+run()
}
class SettingsState{
+run()
}

class GameState{
+run()
}

class GameOverState{
+run()
}

ControllerState <|-- MenuState
ControllerState <|-- RankingState
ControllerState <|-- SettingsState
ControllerState <|-- GameState
ControllerState <|-- GameOverState

note right of ControllerState: State

note "Concrete State" as N1
N1 -u- MenuState

note left of Controller : Context

Controller .r.> ControllerState

@enduml